--- a/my-app/src/pages/HomeContent.css
+++ b/my-app/src/pages/HomeContent.css
@@ -6,8 +6,10 @@ body {
   
   .home-container {
     width: 80%;
-    margin: 0 auto;
-    padding: 40px 20px;
+    margin: 20px auto;
+    margin-left: 4vw;
+    margin-top: 2px;
+    padding: 20px 20px;
     text-align: center;
   }
   
