--- a/my-app/src/pages/Profile.css
+++ b/my-app/src/pages/Profile.css
@@ -5,10 +5,13 @@ body {
   }
   
   .profile-container {
-    width: 60%;
-    margin: 50px auto;
+    width: 80%;
+    margin: 20px auto;
+    margin-left: 4vw;
+    margin-top: 2px;
+    padding: 10px 10px;
     background: white;
-    padding: 20px;
+    /* padding: 20px; */
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
