--- a/my-app/src/pages/LoginPage.css
+++ b/my-app/src/pages/LoginPage.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, sans-serif;
-    width: 100%;
+    /* width: 100%; */
 }
 
 body {
