--- a/my-app/src/pages/HomePage.css
+++ b/my-app/src/pages/HomePage.css
@@ -6,7 +6,7 @@ body {
     height: 100vh;
     background: #f5f7fa;
     overflow: hidden;
-    /* width: 100%; */
+    width: 100%;
   }
 
   .homepage {
